Fix jumpy boxes in VPN results

--- a/src/main.css
+++ b/src/main.css
@@ -136,6 +136,7 @@ ul {
     border-radius: 7px;
     padding: 5px;
     margin: 3px;
+    border: 3px solid #2c3e50;
 }
 
 .vpn-list li .content {
